// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BurgerIcon /> default matches the snapshot 1`] = `
<svg
  aria-label="Menu"
  className="burger-icon__StyledItem-sc-2o2fz7-0 eFhwNS"
  height="10"
  role="img"
  viewBox="0 0 12 10"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Menu
  </title>
  <rect
    className="item-buns"
    height="2"
    width="12"
    y="0"
  />
  <rect
    className="item-patty"
    height="2"
    width="12"
    y="4"
  />
  <rect
    className="item-buns"
    height="2"
    width="12"
    y="8"
  />
</svg>
`;

exports[`<BurgerIcon /> with no \`title\` (\`iconTitle\` to \`null\`) matches the snapshot 1`] = `
<svg
  aria-label="Menu"
  className="burger-icon__StyledItem-sc-2o2fz7-0 eFhwNS"
  height="10"
  role="img"
  viewBox="0 0 12 10"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Menu
  </title>
  <rect
    className="item-buns"
    height="2"
    width="12"
    y="0"
  />
  <rect
    className="item-patty"
    height="2"
    width="12"
    y="4"
  />
  <rect
    className="item-buns"
    height="2"
    width="12"
    y="8"
  />
</svg>
`;

exports[`<BurgerIcon /> with the prop \`isActive\` set to \`true\` matches the snapshot 1`] = `
<svg
  aria-label="Menu"
  className="burger-icon__StyledItem-sc-2o2fz7-0 ifncAw"
  height="10"
  role="img"
  viewBox="0 0 12 10"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Menu
  </title>
  <rect
    className="item-buns"
    height="2"
    width="12"
    y="0"
  />
  <rect
    className="item-patty"
    height="2"
    width="12"
    y="4"
  />
  <rect
    className="item-buns"
    height="2"
    width="12"
    y="8"
  />
</svg>
`;
